<resources>
    <string name="app_name">MP08 UF1 Validation</string>
    <string name="exit_button">Exit</string>
    <string name="sum_of_ages">Sum of ages:</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_friends_by_age">Delete friends by age</string>
    <string name="change_language">Change language</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="id">Id</string>
</resources>